// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Operations Create 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

export type Error = {
    code: number;
    source: string;
    message: string;
    detail: string;
};

export type Request<T> = {
    input?: T;
};

export type Response<T> = {
    data?: T;
    errors: Array<Error>;
    status: number;
};

export type ListRequest<T> = {
    /**
     * A search string to filter the list by.
     * Will match starting string in index text. Case insensitive.
    */
    indexTerm: string;
    nextToken: string;
};

export type ListResponse<T> = {
    data?: Array<T>;
    errors: Array<Error>;
    status: number;
};

/**
 * Public facing data structure for this record.
*/
export type MyResource = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
    firstName: string;
    lastName: string;
    height: number;
    isFrog: boolean;
    arrayOfDoug: Array<Doug>;
    mapOfDoug: Record<string, Doug>;
};

export type CreateMyResourceInput = {
    firstName: string;
    lastName: string;
    height: number;
    isFrog: boolean;
};
"
`;

exports[`Operations Create 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/**
 * Public facing data structure for this record.
*/
export type MyResourceMarshalled = {
    /**
     * Partition Key for this record.
    */
    pk: {
        \\"S\\": string;
    };
    /**
     * Sort Key for this record.
    */
    sk: {
        \\"S\\": string;
    };
    /**
     * Lookup value for this record.
    */
    idx: {
        \\"S\\": string;
    };
    /**
     * Identifier for this record.
    */
    id: {
        \\"S\\": string;
    };
    /**
     * Type of record.
    */
    t: {
        \\"S\\": string;
    };
    /**
     * Version for record.
    */
    v: {
        \\"S\\": string;
    };
    /**
     * The timestamp representing when this record was created.
    */
    ct: {
        \\"S\\": string;
    };
    /**
     * The timestamp representing when this record was last modified.
    */
    mt: {
        \\"S\\": string;
    };
    /**
     * The timestamp representing when this record was marked as deleted.
    */
    dt: {
        \\"S\\": string;
    };
    fn: {
        \\"S\\": string;
    };
    ln: {
        \\"S\\": string;
    };
    ht: {
        \\"N\\": number;
    };
    if: {
        \\"BOOL\\": boolean;
    };
    ad: {
        \\"L\\": string;
    };
    md: {
        \\"M\\": string;
    };
};

export type CreateMyResourceInputMarshalled = {
    /**
     * Partition Key for this record.
    */
    pk: {
        \\"S\\": string;
    };
    /**
     * Sort Key for this record.
    */
    sk: {
        \\"S\\": string;
    };
    /**
     * Lookup value for this record.
    */
    idx: {
        \\"S\\": string;
    };
    /**
     * Identifier for this record.
    */
    id: {
        \\"S\\": string;
    };
    /**
     * Type of record.
    */
    t: {
        \\"S\\": string;
    };
    /**
     * Version for record.
    */
    v: {
        \\"S\\": string;
    };
    /**
     * The timestamp representing when this record was created.
    */
    ct: {
        \\"S\\": string;
    };
    fn: {
        \\"S\\": string;
    };
    ln: {
        \\"S\\": string;
    };
    ht: {
        \\"N\\": number;
    };
    if: {
        \\"BOOL\\": boolean;
    };
};

/**
 * Public facing data structure for this record.
*/
export type MyResourceUnmarshalled = {
    /**
     * Partition Key for this record.
    */
    pk: string;
    /**
     * Sort Key for this record.
    */
    sk: string;
    /**
     * Lookup value for this record.
    */
    idx: string;
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    t: string;
    /**
     * Version for record.
    */
    v: string;
    /**
     * The timestamp representing when this record was created.
    */
    ct: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    mt: string;
    /**
     * The timestamp representing when this record was marked as deleted.
    */
    dt: string;
    fn: string;
    ln: string;
    ht: number;
    if: boolean;
    ad: Array<DougUnmarshalled>;
    md: Record<string, DougUnmarshalled>;
};

export type CreateMyResourceInputUnmarshalled = {
    /**
     * Partition Key for this record.
    */
    pk: string;
    /**
     * Sort Key for this record.
    */
    sk: string;
    /**
     * Lookup value for this record.
    */
    idx: string;
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    t: string;
    /**
     * Version for record.
    */
    v: string;
    /**
     * The timestamp representing when this record was created.
    */
    ct: string;
    fn: string;
    ln: string;
    ht: number;
    if: boolean;
};
"
`;

exports[`Resource formatting test 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

export type Error = {
    code: number;
    source: string;
    message: string;
    detail: string;
};

export type Request<T> = {
    input?: T;
};

export type Response<T> = {
    data?: T;
    errors: Array<Error>;
    status: number;
};

export type ListRequest<T> = {
    /**
     * A search string to filter the list by.
     * Will match starting string in index text. Case insensitive.
    */
    indexTerm: string;
    nextToken: string;
};

export type ListResponse<T> = {
    data?: Array<T>;
    errors: Array<Error>;
    status: number;
};

/**
 * Public facing data structure for this record.
*/
export type MyResource = {
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    type: string;
    /**
     * Version for record.
    */
    version: string;
    /**
     * The timestamp representing when this record was created.
    */
    createdTimestamp: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    modifiedTimestamp: string;
    firstName: string;
    lastName: string;
    height: number;
    isFrog: boolean;
    arrayOfDoug: Array<Doug>;
    mapOfDoug: Record<string, Doug>;
};
"
`;

exports[`Resource formatting test 2`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/**
 * Public facing data structure for this record.
*/
export type MyResourceMarshalled = {
    /**
     * Partition Key for this record.
    */
    pk: {
        \\"S\\": string;
    };
    /**
     * Sort Key for this record.
    */
    sk: {
        \\"S\\": string;
    };
    /**
     * Lookup value for this record.
    */
    idx: {
        \\"S\\": string;
    };
    /**
     * Identifier for this record.
    */
    id: {
        \\"S\\": string;
    };
    /**
     * Type of record.
    */
    t: {
        \\"S\\": string;
    };
    /**
     * Version for record.
    */
    v: {
        \\"S\\": string;
    };
    /**
     * The timestamp representing when this record was created.
    */
    ct: {
        \\"S\\": string;
    };
    /**
     * The timestamp representing when this record was last modified.
    */
    mt: {
        \\"S\\": string;
    };
    /**
     * The timestamp representing when this record was marked as deleted.
    */
    dt: {
        \\"S\\": string;
    };
    fn: {
        \\"S\\": string;
    };
    ln: {
        \\"S\\": string;
    };
    ht: {
        \\"N\\": number;
    };
    if: {
        \\"BOOL\\": boolean;
    };
    ad: {
        \\"L\\": string;
    };
    md: {
        \\"M\\": string;
    };
};

/**
 * Public facing data structure for this record.
*/
export type MyResourceUnmarshalled = {
    /**
     * Partition Key for this record.
    */
    pk: string;
    /**
     * Sort Key for this record.
    */
    sk: string;
    /**
     * Lookup value for this record.
    */
    idx: string;
    /**
     * Identifier for this record.
    */
    id: string;
    /**
     * Type of record.
    */
    t: string;
    /**
     * Version for record.
    */
    v: string;
    /**
     * The timestamp representing when this record was created.
    */
    ct: string;
    /**
     * The timestamp representing when this record was last modified.
    */
    mt: string;
    /**
     * The timestamp representing when this record was marked as deleted.
    */
    dt: string;
    fn: string;
    ln: string;
    ht: number;
    if: boolean;
    ad: Array<DougUnmarshalled>;
    md: Record<string, DougUnmarshalled>;
};
"
`;
